small changes to save before copying over to other app.